@@ -1,17 +1,18 @@
 #!/usr/bin/python
 
-import immunity, os, pwd, stat, sys
+import grp, immunity, os, pwd, stat, sys
 
 def switch_sudo_user(target_user):
-  immunity.set_cap("cap_setgid+ep cap_setuid,cap_sys_admin,cap_mknod,cap_sys_chroot,cap_setpcap+p")
+  immunity.set_cap("cap_setgid+ep cap_setuid,cap_sys_admin,cap_sys_chroot,cap_setpcap+p")
   os.setgroups([])
   pwd_data = pwd.getpwnam(target_user)
   os.setgid(pwd_data.pw_gid)
-  os.setgroups([])
-  immunity.set_cap("cap_setgid+p cap_setuid+ep cap_sys_admin,cap_mknod,cap_sys_chroot,cap_setpcap+p")
+  grp_data = grp.getgrnam("audio")
+  os.setgroups([grp_data.gr_gid])
+  immunity.set_cap("cap_setgid+p cap_setuid+ep cap_sys_admin,cap_sys_chroot,cap_setpcap+p")
   immunity.keep_caps()
   os.setuid(pwd_data.pw_uid)
-  immunity.set_cap("cap_setgid,cap_setuid,cap_sys_admin,cap_mknod,cap_sys_chroot,cap_setpcap+p")
+  immunity.set_cap("cap_setgid,cap_setuid,cap_sys_admin,cap_sys_chroot,cap_setpcap+p")
 
 def get_xauth(target_user):
   switch_sudo_user(target_user)
@@ -28,20 +29,20 @@ def clear_environment():
 
 def switch_user(target_user):
   pwd_data = pwd.getpwnam(target_user)
-  immunity.set_cap("cap_setgid+ep cap_setuid,cap_sys_admin,cap_mknod,cap_sys_chroot,cap_setpcap+p")
+  immunity.set_cap("cap_setgid+ep cap_setuid,cap_sys_admin,cap_sys_chroot,cap_setpcap+p")
   os.setgid(pwd_data.pw_gid)
-  immunity.set_cap("cap_setuid+ep cap_sys_admin,cap_mknod,cap_sys_chroot,cap_setpcap+p")
+  immunity.set_cap("cap_setuid+ep cap_sys_admin,cap_sys_chroot,cap_setpcap+p")
   os.setuid(pwd_data.pw_uid)
-  immunity.set_cap("cap_sys_admin,cap_mknod,cap_sys_chroot,cap_setpcap+p")
+  immunity.set_cap("cap_sys_admin,cap_sys_chroot,cap_setpcap+p")
   os.putenv("USER", pwd_data.pw_name)
   homedir = pwd_data.pw_dir
   os.putenv("HOME", homedir)
   os.chdir(homedir)
 
 def new_namespace():
-  immunity.set_cap("cap_sys_admin+ep cap_mknod,cap_sys_chroot,cap_setpcap+p")
+  immunity.set_cap("cap_sys_admin+ep cap_sys_chroot,cap_setpcap+p")
   immunity.unshare_newns()
-  immunity.set_cap("cap_sys_admin,cap_mknod,cap_sys_chroot,cap_setpcap+p")
+  immunity.set_cap("cap_sys_admin,cap_sys_chroot,cap_setpcap+p")
 
 def makedirs(dir):
   if not os.path.exists(dir):
@@ -60,24 +61,20 @@ def mount_tmpfs(dir):
   makedirs(dir)
   immunity.mount_tmpfs(dir)
 
-def alsa():
-  makedirs("/mnt/dev/snd")
-  for dev_file in os.listdir("/dev/snd"):
-    rdev = os.stat("/dev/snd/" + dev_file).st_rdev
-    os.mknod("/mnt/dev/snd/" + dev_file, 0600 | stat.S_IFCHR, rdev)
-
 def fake_filesystem():
-  immunity.set_cap("cap_sys_admin+ep cap_mknod,cap_sys_chroot,cap_setpcap+p")
+  immunity.set_cap("cap_sys_admin+ep cap_sys_chroot,cap_setpcap+p")
   mount_tmpfs("/mnt")
   immunity.remount("/")
   mount_bind("/bin")
   mount_bind("/dev/null")
+  mount_bind("/dev/snd")
   mount_bind("/etc/X11")
   mount_bind("/etc/alternatives")
   mount_bind("/etc/fonts")
   mount_bind("/etc/gai.conf")
   mount_bind("/etc/gconf")
   mount_bind("/etc/gnome-vfs-2.0")
+  mount_bind("/etc/group")
   mount_bind("/etc/gtk-2.0")
   mount_bind("/etc/host.conf")
   mount_bind("/etc/hosts")
@@ -102,8 +99,6 @@ def fake_filesystem():
   mount_bind("/var/lib/defoma")
   mount_bind("/var/lib/gconf")
   mount_bind("/var/lib/immunity")
-  immunity.set_cap("cap_mknod+ep cap_sys_chroot,cap_setpcap+p")
-  alsa()
   immunity.set_cap("cap_sys_chroot+ep cap_setpcap+p")
   os.chroot("/mnt")
   immunity.set_cap("cap_setpcap+ep")
@@ -117,7 +112,7 @@ def set_xauth(data):
   input.close()
 
 def main():
-  immunity.set_cap("cap_setgid,cap_setuid,cap_sys_admin,cap_mknod,cap_sys_chroot,cap_setpcap+p")
+  immunity.set_cap("cap_setgid,cap_setuid,cap_sys_admin,cap_sys_chroot,cap_setpcap+p")
   sudo_user = os.getenv("SUDO_USER")
   xauth_data = get_xauth(sudo_user)
   clear_environment()
