@@ -5,8 +5,9 @@ immunity (0.3) UNRELEASED; urgency=low
   * Disable device files and suid and sgid binaries by remounting "/".
   * Do no longer make /tmp world writable.
   * Remove unused functions from the Python module.
+  * Put shadow user into supplementary group "audio".
 
- -- Torsten Werner <twerner@debian.org>  Fri, 20 Mar 2009 16:20:26 +0100
+ -- Torsten Werner <twerner@debian.org>  Fri, 20 Mar 2009 21:24:55 +0100
 
 immunity (0.2) experimental; urgency=low
 
